--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,8 +1,8 @@
 name: lint
-run-name: linter check
+run-name: testing
 on: [push]
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -10,4 +10,4 @@ jobs:
         with:
           node-version: '20'
       - run: npm i
-      - run: npm run lint
+      - run: npm run test
